test/expected/explain_lll.out
explain long long long x
                  ^
19: error: "long" can not be combined with "long long"
